# cmake-rpath-link-reorder-repro

./: CMakeLists.txt  README.md  run.sh
ext_src/: ext.c  ext_internal.c
src/: consumer.c  inner.c  inner_priv.c
